<resources>
    <string name="AppDebugTag">نسخه آزمایشی</string>
    <string name="AppDebugNote">شما هم اکنون در نسخه آزمایشی هستید</string>
    <string name="AppDebugClick">جهت انتقال به نسخه اصلی کلیک کنید</string>
    <string name="AppImageCrop">Crop Pic</string>
    <string name="AppImageContent">تصویر</string>
    <string name="AppInputEmpty">فیلد خالی است.</string>
    <string name="AppChooserFile">باز کردن با</string>
    <string name="AppChooserShare">اشتراک گذاری با</string>
    <string name="AppSearchHint">جستجو</string>
    <string name="AppSearchEmpty">داده یافت نشده است.</string>
    <string name="AppFileSelect">انتخاب فايل</string>
    <string name="AppFileEmpty">فايل انتخاب نشده است.</string>
    <string name="AppSwicthOn">فعال</string>
    <string name="AppSwicthOff">غیر فعال</string>
    <string name="AppDefaultUnknown">نامعلوم</string>
    <string name="AppDefaultWeek">00/00 تا 00/00</string>
    <string name="AppSessionPrice">مبلغ جلسه</string>
    <string name="AppEdit">ویرایش</string>
    <string name="AppReserve">رزرو</string>
    <string name="AppFilters">فیلترها:</string>
    <string name="AppAccounting">حسابداری</string>
    <string name="AppPlatforms">محل‌های برگزاری جلسات</string>
    <string name="AppRooms">اتاق‌های درمان</string>
    <string name="AppSchedules">برنامه‌های درمانی</string>
    <string name="AppTags">برچسب‌های مهم</string>
    <string name="AppUsers">اعضاء</string>
    <string name="StartTime">زمان شروع نوبت‌گیری</string>
    <string name="EndTime">زمان بستن نوبت‌گیری</string>
    <string name="AccurateTime">زمان دقیق</string>
    <string name="RelativeTime">زمان نسبی</string>
    <string name="DayHint">روز و</string>
    <string name="HourHint">ساعت و</string>
    <string name="MinuteStartHint">دقیقه قبل تشکیل جلسه</string>
    <string name="MinuteEndHint">دقیقه بعد اتمام جلسه</string>
    <string name="SnackChangesSaved">تغییرات ثبت شد.</string>
    <string name="SnackScheduleReserved">برنامه درمانی رزرو شد.</string>
    <string name="SnackSuccesAcceptation">پذیرش ثبت شد.</string>
    <string name="SnackIbanSettled">حساب تسویه شد.</string>
    <string name="SnackLoginOtherUser">ورود به کاربری انجام شد.</string>
    <string name="SnackLogoutFormOtherUser">خروج از کاربری انجام شد.</string>
    <string name="SnackCreatedNewBill">فاکتور جدید ساخته شد.</string>
    <string name="SnackCreatedNewBulkSample">نمونه گروهی جدید ساخته شد.</string>
    <string name="SnackCreatedNewCase">پرونده جدید ساخته شد.</string>
    <string name="SnackCreatedNewCaseUser">عضو جدید پرونده ثبت شد.</string>
    <string name="SnackCreatedNewCenter">مرکز درمانی جدید ساخته شد.</string>
    <string name="SnackCreatedNewCenterUser">عضو جدید مرکز ثبت شد.</string>
    <string name="SnackCreatedNewDocument">مدرک جدید ساخته شد.</string>
    <string name="SnackCreatedNewIban">حساب بانکی جدید افزوده شد.</string>
    <string name="SnackCreatedNewPlatform">محل برگزاری جدید ساخته شد.</string>
    <string name="SnackCreatedNewPractice">کاربرگ جدید ساخته شد.</string>
    <string name="SnackCreatedNewReport">گزارش جدید ساخته شد.</string>
    <string name="SnackCreatedNewRoom">اتاق درمان جدید ساخته شد.</string>
    <string name="SnackCreatedNewRoomUser">عضو جدید اتاق ثبت شد.</string>
    <string name="SnackCreatedNewSample">نمونه جدید ساخته شد.</string>
    <string name="SnackCreatedNewSchedule">برنامه جدید ساخته شد.</string>
    <string name="SnackCreatedNewSession">جلسه جدید ساخته شد.</string>
    <string name="SnackCreatedNewSessionUser">عضو جدید جلسه ثبت شد.</string>
    <string name="SnackCreatedNewTreasury">کیف پول جدید ساخته شد.</string>
    <string name="SnackCreatedNewUser">کاربر جدید ایجاد شد.</string>
    <string name="SnackSampleScored">نمونه نمره‌دهی شد.</string>
    <string name="SnackSampleFilled">نمونه پر شد.</string>
    <string name="SnackSampleClosed">نمونه بسته شد.</string>
    <string name="SnackSampleOpened">نمونه باز شد.</string>
    <string name="ToastFeatureNotAddedYet">این دستور هنوز اضافه نشده است.</string>
    <string name="ToastHadSelectedPhone">این شماره قبلا انتخاب شده است.</string>
    <string name="ToastHadSelectedAxis">این محور قبلا انتخاب شده است.</string>
    <string name="ToastImageNewNotSelected">تصویر جدید انتخاب نشده است.</string>
    <string name="ToastImageNotSelected">تصویر انتخاب نشده است.</string>
    <string name="ToastSampleDoublePressExit">برای خروج از نمونه دوباره کلیک کنید.</string>
    <string name="ToastSampleLinkSaved">لینک نمونه ذخیره شد.</string>
    <string name="ToastActivityEmptyException">برنامه‌ای برای اجرا وجود ندارد.</string>
    <string name="ToastActivityPaymentException">برنامه‌ای برای بارگذاری درگاه پرداخت وجود ندارد.</string>
    <string name="ToastPermissionFileException">ریسلو دسترسی به آپلود فایل ندارد.</string>
    <string name="ToastPermissionStorageException">ریسلو دسترسی به ذخیره فایل ندارد.</string>
    <string name="ToastPermissionGalleryException">ریسلو دسترسی به البوم ندارد.</string>
    <string name="ToastPermissionCameraException">ریسلو دسترسی به دوربین ندارد.</string>
    <string name="ToastIntentFileException">خطا در انتخاب فایل! لطفا دوباره تلاش کنید.</string>
    <string name="ToastIntentGalleryException">خطا در انتخاب تصویر! لطفا دوباره تلاش کنید.</string>
    <string name="ToastIntentCameraException">خطا در گرفتن تصویر! لطفا دوباره تلاش کنید.</string>
    <string name="ToastIntentCropException">خطا در کراپ تصویر! لطفا دوباره تلاش کنید.</string>
    <string name="SplashVersion">نسخه</string>
    <string name="IntroRisloo">ریسلو</string>
    <string name="IntroLogin">ورود</string>
    <string name="IntroTitle">درمان، آموزش و پژوهش</string>
    <string name="IntroDescription">شما به عنوان روان‌شناس، روی کار اصلی خود تمرکز کنید؛ دغدغه کارهای جانبی درمان، آموزش و پژوهش را نداشته باشید و به خود آن‌ها فقط فکر کنید. ریسلو بستری یک‌پارچه است که کارهای شما را در این سه حوزه تسهیل می‌کند.</string>
    <string name="IntroRegister">عضو ریسلو شوید</string>
    <string name="IntroVersion">نسخه</string>
    <string name="IntroTrust">© تمامی حقوق این نرم افزار متعلق به شرکت ریس اعتماد ایرانیان می‌باشد.</string>
    <string name="AuthHeader">ریسلو</string>
    <string name="AuthLoginHelper">اگر عضو ریسلو هستید و کلمه عبور خود را به‌ یاد دارید روی گزینه ورود کلیک کنید.</string>
    <string name="AuthRegisterHelper">اگر عضو ریسلو نیستید، روی گزینه عضویت کلیک کنید.</string>
    <string name="AuthPasswordRecoverHelper">اگر عضو ریسلو هستید و کلمه عبور خود را فراموش کرده‌اید روی گزینه فراموشی کلمه عبور کلیک کنید.</string>
    <string name="AuthLoginLink">ورود</string>
    <string name="AuthRegisterLink">عضویت</string>
    <string name="AuthPasswordRecoverLink">فراموشی کلمه عبور</string>
    <string name="AuthDashboardLink">داشبورد</string>
    <string name="AuthLogoutLink">خروج</string>
    <string name="LoginFragmentTitle">ورود</string>
    <string name="LoginFragmentInput">موبایل</string>
    <string name="LoginFragmentGuide">برای ورود به ریسلو موبایل خود را در فیلد بالا وارد کرده و روی دکمه ادامه کلیک کنید.</string>
    <string name="LoginFragmentButton">ادامه</string>
    <string name="PasswordChangeFragmentTitle">تغییر کلمه عبور</string>
    <string name="PasswordChangeFragmentInput">کلمه عبور جديد</string>
    <string name="PasswordChangeFragmentGuide">کلمه عبور جدید خود را وارد کرده و روی دکمه تغییر کلیک کنید.</string>
    <string name="PasswordChangeFragmentButton">تغییر</string>
    <string name="PasswordFragmentTitle">کلمه عبور</string>
    <string name="PasswordFragmentInput">کلمه عبور</string>
    <string name="PasswordFragmentGuide">کلمه عبور خود را وارد کرده و روی دکمه ورود کلیک کنید.</string>
    <string name="PasswordFragmentButton">ورود</string>
    <string name="PasswordRecoverFragmentTitle">فراموشی کلمه عبور</string>
    <string name="PasswordRecoverFragmentInput">موبایل</string>
    <string name="PasswordRecoverFragmentGuide">اگر کلمه عبور خود را فراموش کرده‌اید، موبایل خود را در فیلد بالا وارد کرده و روی دکمه دریافت کد پیامکی کلیک کنید.</string>
    <string name="PasswordRecoverFragmentButton">دریافت کد پیامکی</string>
    <string name="PinFragmentTitle">تأیید موبایل</string>
    <string name="PinFragmentInput">کد پیامکی</string>
    <string name="PinFragmentGuide">یک کد 6 رقمی به شماره 09123456789 پیامک شد. کد پیامک شده را در فیلد مشخص شده وارد کرده و روی دکمه تأیید کلیک کنید.</string>
    <string name="PinFragmentButton">تأیید</string>
    <string name="PinFragmentResend">کد پیامکی دریافت نکردی؟ ارسال مجدد</string>
    <string name="PinFragmentTimer">کد پیامکی برای شما ارسال شد :</string>
    <string name="RegisterFragmentTitle">عضویت</string>
    <string name="RegisterFragmentMobile">موبایل</string>
    <string name="RegisterFragmentGuide">برای عضویت در ریسلو موبایل خود را در فیلد بالا وارد کرده و روی دکمه ادامه کلیک کنید.</string>
    <string name="RegisterFragmentButton">ادامه</string>
    <string name="SerialFragmentTitle">ورود</string>
    <string name="SerialFragmentInput">دستور ورودی</string>
    <string name="SerialFragmentGuide">برای شروع آزمون دستور ورودی خود را در فیلد بالا وارد کرده و روی دکمه بررسی کلیک کنید.</string>
    <string name="SerialFragmentButton">بررسی</string>
    <string name="TestFixed">بدون تغییر</string>
    <string name="TestSaving">در حال ذخیره کردن …</string>
    <string name="ChainFragmentTitle">وضعیت نمونه زنجیره‌ای</string>
    <string name="DescriptionFragmentTitle">توضیحات</string>
    <string name="EndFragmentTitle">پایان نمونه‌گیری</string>
    <string name="EndFragmentDescription">اگر از اتمام نمونه مطمئن هستید و به تمامی گزینه‌ها پاسخ داده‌اید می‌توانید دکمه اتمام نمونه را بزنید. بعد از زدن این دکمه، دیگر قادر به ویرایش نمونه نمی‌باشید.</string>
    <string name="EndFragmentButtonSample">اتمام نمونه</string>
    <string name="EndFragmentButtonNext">اتمام و انتقال به نمونه بعدی</string>
    <string name="EndFragmentButtonChain">اتمام نمونه زنجیره‌ای</string>
    <string name="EntityFragmentTitle">بخش</string>
    <string name="DescriptiveFragmentTitle">تست تشريحي</string>
    <string name="OptionalFragmentTitle">تست متنی</string>
    <string name="PictoralFragmentTitle">تست تصویری</string>
    <string name="PrerequisiteFragmentTitle">اطلاعات جمعیت ‌شناختی و عمومی</string>
    <string name="PrerequisiteFragmentDescription">بعد از تکمیل اطلاعات زیر به صفحه بعد رفته و پاسخ‌دهی را شروع کنید.</string>
    <string name="PsyDescFragmentTitle">توضیحات روان‌شناس</string>
    <string name="MainTitleDashboard">داشبورد</string>
    <string name="MainTitleCenters">مراکز درمانی</string>
    <string name="MainTitleCases">پرونده‌ها</string>
    <string name="MainTitleSessions">جلسات</string>
    <string name="MainTitleUsers">اعضاء</string>
    <string name="MainTitleSamples">نمونه‌ها</string>
    <string name="MainTitleBulkSamples">نمونه‌های گروهی</string>
    <string name="BillAdapterSerial">سریال</string>
    <string name="BillAdapterName">عنوان</string>
    <string name="BillAdapterDate">تاریخ</string>
    <string name="BillAdapterCreditor">بستانکار</string>
    <string name="BillAdapterDebtor">بدهکار</string>
    <string name="BillAdapterAmount">مبلغ (تومان)</string>
    <string name="BillAdapterStatus">وضعیت</string>
    <string name="BulkSampleAdapterSerial">سریال</string>
    <string name="BulkSampleAdapterName">عنوان</string>
    <string name="BulkSampleAdapterCase">پرونده</string>
    <string name="BulkSampleAdapterRoom">اتاق درمان</string>
    <string name="BulkSampleAdapterCenter">مرکز درمانی</string>
    <string name="BulkSampleAdapterStatus">وضعیت</string>
    <string name="BulkSampleAdapterReference">اعضا</string>
    <string name="CenterUserAdapterSerial">سریال</string>
    <string name="CenterUserAdapterName">نام</string>
    <string name="CenterUserAdapterMobile">موبایل</string>
    <string name="CenterUserAdapterPosition">موقعیت</string>
    <string name="CenterUserAdapterStatus">وضعیت</string>
    <string name="CenterUserAdapterAccepted">زمان پذیرش</string>
    <string name="CenterUserAdapterKicked">زمان تعلیق</string>
</resources>