<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layoutDirection="rtl"
    android:background="@drawable/draw_2sdp_solid_gray50">

    <TextView
        android:id="@+id/serial_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:minLines="2"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterSerial"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/name_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterName"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toStartOf="@id/room_textView"
        app:layout_constraintStart_toEndOf="@id/serial_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/case_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterCase"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name_textView"
        app:layout_constraintStart_toStartOf="@id/name_textView"
        app:layout_constraintTop_toBottomOf="@id/name_textView" />

    <TextView
        android:id="@+id/room_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterRoom"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toStartOf="@id/status_textView"
        app:layout_constraintStart_toEndOf="@id/name_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/center_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterCenter"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/room_textView"
        app:layout_constraintStart_toStartOf="@id/room_textView"
        app:layout_constraintTop_toBottomOf="@id/room_textView" />

    <TextView
        android:id="@+id/status_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterStatus"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/room_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reference_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/BulkSampleAdapterReference"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/status_textView"
        app:layout_constraintStart_toStartOf="@id/status_textView"
        app:layout_constraintTop_toBottomOf="@id/status_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>