<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layoutDirection="rtl"
    android:background="@drawable/draw_2sdp_solid_coolgray50">

    <TextView
        android:id="@+id/serial_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:minLines="2"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterSerial"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/name_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterName"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toStartOf="@id/position_textView"
        app:layout_constraintStart_toEndOf="@id/serial_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterMobile"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name_textView"
        app:layout_constraintStart_toStartOf="@id/name_textView"
        app:layout_constraintTop_toBottomOf="@id/name_textView" />

    <TextView
        android:id="@+id/position_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterPosition"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toStartOf="@id/accepted_textView"
        app:layout_constraintStart_toEndOf="@id/name_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_texView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterStatus"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/position_textView"
        app:layout_constraintStart_toStartOf="@id/position_textView"
        app:layout_constraintTop_toBottomOf="@id/position_textView" />

    <TextView
        android:id="@+id/accepted_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_34sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterAccepted"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray700"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/position_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/canceled_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center|right"
        android:text="@string/CenterUserAdapterKicked"
        android:textSize="@dimen/_7ssp"
        android:textStyle="normal"
        android:textColor="@color/CoolGray500"
        android:textAlignment="gravity"
        android:fontFamily="@font/dana_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/accepted_textView"
        app:layout_constraintStart_toStartOf="@id/accepted_textView"
        app:layout_constraintTop_toBottomOf="@id/accepted_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>